[package]
name = "stealth-zk"
version = "0.1.0"
edition = "2021"

[lib]
name = "stealth_zk"
path = "lib.rs"
crate-type = ["rlib"]

[dependencies]
frame-support     = { version = "4.0.0", default-features = false, features = ["std"] }
frame-system      = { version = "4.0.0", default-features = false, features = ["std"] }
sp-runtime        = { version = "4.0.0", default-features = false, features = ["std"] }
sp-std            = { version = "4.0.0", default-features = false }
codec             = { package = "parity-scale-codec", version = "2.3.1", default-features = false, features = ["derive"] }
scale-info        = { version = "2.0.0", default-features = false, features = ["derive"] }
sp-core           = { version = "4.0.0", default-features = false, features = ["std"] }

# ZK-snark dependencies – bez żadnych `features`
ark-groth16       = { version = "0.4.0", default-features = false }
ark-bls12-381     = { version = "0.4.0", default-features = false }
ark-serialize     = { version = "0.4.0", default-features = false }

[features]
# domyślna – włącza std
default = ["std"]

# featura `std`, której runtime od Ciebie wymaga
std = [
  "frame-support/std",
  "frame-system/std",
  "sp-runtime/std",
  "sp-std/std",
  "sp-core/std",
]

# Twoje istniejące feature’y
runtime-benchmarks = []
